Fixed first footer section with wrap and sizes

--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -22,9 +22,10 @@
   padding-right: 1rem;
 }
 .footer-article-container{
-    flex: 0 1 calc(33.33% - 21.33px); /* Tre kolumner med mellanrum */
+    flex: 1;
   display: flex;
-  gap: 1rem;
+  margin-left: 0px;
+
 }
 .footer-article-container-middle{
     flex: 0 1 calc(33.33% - 21.33px); /* Tre kolumner med mellanrum (32px / 1.5) */
@@ -47,10 +48,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 32px;
+    gap: 18px;
     max-width: 1208px;
     margin: 0 auto;
-    padding: 40px 1rem;
+    padding: 40px 40px;
 
 }
 .footer-section2-size{
@@ -93,6 +94,8 @@
 
 }
 .footer-p{
+    display: flex;
+    flex-wrap: wrap;
     margin: 0;
     font-family: 'interVariable', 'interVariable Fallback';
     font-weight: 400;
@@ -101,7 +104,6 @@
     letter-spacing: -0.13px;
     max-width: 200px;
     text-size-adjust: 100%;
-    margin:0;
 }
 .footer-p-middle{
     margin-bottom: 8px;
@@ -130,9 +132,8 @@
   }
   @media (width > 767px) {
     .footer-img{
-    height: 100%;
-    width: 100%;
-    inset: 0px;
+    height: 80px;
+    min-width: 80px;
     color: transparent;
     }
   }
